tests/error/fullOfErrors/bar.tsx
export let bar = 123;
export let bas = 123;
bar = "hello";
bas = "world";